<?xml version="1.0"?>
<package>
  <name>ros_utils</name>
  <version>0.0.1</version>
  <description>The ros_utils package</description>

  <maintainer email="hkarao@kth.se">Hakan Karaoguz</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>



  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>metaroom_xml_parser</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>qt_build</build_depend>

  <build_depend>soma_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>soma_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>metaroom_xml_parser</run_depend>
   <run_depend>libqt4-dev</run_depend>
  <run_depend>qt_build</run_depend>



 <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>

</package>
